[package]
name = "fifo_lance"
version = "0.1.0"
edition = "2021"
description = "GPU/CPU FIFO PnL on a transparent, Lance-shaped packed store"

[[bin]]
name = "fifo"
path = "src/main.rs"

[lib]
name = "fifo_lance"
path = "src/lib.rs"

[dependencies]
arrow = "54"
parquet = "54"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
# `cuda-version-from-build-system` auto-detects the installed CUDA on the GPU box.
# This dep only builds when the `gpu` feature is on (i.e. on an NVIDIA host).
cudarc = { version = "0.12", optional = true, default-features = false, features = [
    "std",
    "nvrtc",
    "driver",
    "cuda-version-from-build-system",
] }

[features]
default = []
# Enable on an NVIDIA box (needs the CUDA toolkit + driver). Compiles the GPU
# FIFO arm. Will NOT build on a machine without CUDA — that is expected.
gpu = ["dep:cudarc"]

[profile.release]
opt-level = 3
lto = "thin"
